// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button default 1`] = `
"<Frame width={100} height={40}>
  <Button
    style={{ color: '#000', backgroundColor: '#f1f5f9', width: '100px' }}
    isDisabled={false}
  >
    Submit
  </Button>
</Frame>;
"
`;

exports[`card with no border radius on image default 1`] = `
"<Frame width={300} height={400}>
  <Box
    style={{
      display: 'flex',
      backgroundColor: undefined,
      width: '300px',
      height: '400px',
    }}
    className=\\"flex-col bg-white p-4 shadow rounded-md\\"
  >
    <Image
      style={{ minHeight: 0, objectFit: 'cover' }}
      className=\\"rounded-none flex-1\\"
      src=\\"https://placekitten.com/300/300\\"
    />
    <Box style={{ display: 'flex' }} className=\\"mt-4\\">
      <Text style={{ flex: '1', textAlign: undefined }} fontSize=\\"2xl\\">
        News
      </Text>
    </Box>
    <Text style={{ textAlign: undefined }} className=\\"mt-1\\">
      Here you can explore the latest news and information.
    </Text>
  </Box>
</Frame>;
"
`;

exports[`generate file base 1`] = `
Object {
  ".postcssrc": "{
  \\"plugins\\": {
    \\"tailwindcss\\": {}
  }
}",
  "App.tsx": "import { Box, ChakraProvider } from '@chakra-ui/react';

import * as React from 'react';

/**
 * To make your layout responsive, delete this Frame component and replace any
 * instance of it with your own layout components that use e.g. flexbox.
 */
function Frame(
  props: React.PropsWithChildren<
    Pick<React.CSSProperties, 'left' | 'top' | 'width' | 'height'>
  >
) {
  return (
    <Box
      style={{
        position: 'absolute',
        left: props.left,
        top: props.top,
        width: props.width,
        height: props.height,
      }}
    >
      {props.children}
    </Box>
  );
}

export function App() {
  return <ChakraProvider></ChakraProvider>;
}
",
  "index.css": "@tailwind base;
@tailwind components;
@tailwind utilities;",
  "index.html": "<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>App</title>
  </head>
  <body>
    <div id=\\"root\\"></div>
    <link href=\\"./index.css\\" rel=\\"stylesheet\\" />
    
    <script type=\\"module\\" src=\\"index.tsx\\"></script>
  </body>
</html>",
  "index.tsx": "import { createRoot } from \\"react-dom/client\\";
import * as React from 'react';

import { App } from \\"./App\\";

const rootElement = document.getElementById(\\"root\\");
const root = createRoot(rootElement!);

root.render(<App />);",
  "package.json": "{
  \\"name\\": \\"App\\",
  \\"version\\": \\"0.0.1\\",
  \\"scripts\\": {
    \\"start\\": \\"parcel index.html --open\\",
    \\"build\\": \\"parcel build index.html\\"
  },
  \\"dependencies\\": {
    \\"react\\": \\"^18\\",
    \\"react-dom\\": \\"^18\\",
    \\"@chakra-ui/icons\\": \\"^2.0.17\\",
    \\"@chakra-ui/react\\": \\"^2.5.1\\",
    \\"@chakra-ui/system\\": \\"^2.5.1\\",
    \\"@emotion/react\\": \\"^11.10.6\\",
    \\"@emotion/styled\\": \\"^11.10.6\\",
    \\"framer-motion\\": \\"^10.2.3\\"
  },
  \\"devDependencies\\": {
    \\"autoprefixer\\": \\"10.4.14\\",
    \\"parcel\\": \\"^2.8.3\\",
    \\"postcss\\": \\"8.4.21\\",
    \\"tailwindcss\\": \\"3.2.7\\",
    \\"process\\": \\"^0.11.10\\",
    \\"@types/react\\": \\"^18\\",
    \\"@types/react-dom\\": \\"^18\\"
  }
}",
  "tailwind.config.js": "module.exports = {
  content: [\\"./*.{html,js,jsx,ts,tsx}\\"],
  theme: {
    extend: {},
  },
  variants: {},
  plugins: [],
};",
}
`;

exports[`hero default 1`] = `
"<Frame width={400} height={400}>
  <Box
    style={{
      display: 'flex',
      backgroundColor: undefined,
      width: '400px',
      height: '400px',
    }}
    className=\\"flex-col bg-transparent p-4 gap-3 items-center justify-center\\"
  >
    <Box style={{ display: 'flex' }}>
      <Text style={{ flex: '1', textAlign: 'center' }} fontSize=\\"6xl\\">
        Create, iterate, inspire.
      </Text>
    </Box>
    <Box style={{ display: 'flex' }} className=\\"mb-4\\">
      <Text style={{ flex: '1', textAlign: 'center' }} fontSize=\\"2xl\\">
        Turn great ideas into new possibilities.
      </Text>
    </Box>
    <Box
      style={{ display: 'flex', backgroundColor: undefined }}
      className=\\"bg-transparent flex-row items-center gap-6\\"
    >
      <Button
        style={{ color: '#fff', backgroundColor: '#15803d' }}
        isDisabled={false}
      >
        Get started
      </Button>
    </Box>
  </Box>
</Frame>;
"
`;

exports[`hero left aligned 1`] = `
"<Frame width={400} height={400}>
  <Box
    style={{
      display: 'flex',
      backgroundColor: undefined,
      width: '400px',
      height: '400px',
    }}
    className=\\"flex-col bg-transparent p-4 gap-3 items-start justify-center\\"
  >
    <Box style={{ display: 'flex' }}>
      <Text style={{ flex: '1', textAlign: 'left' }} fontSize=\\"6xl\\">
        Create, iterate, inspire.
      </Text>
    </Box>
    <Box style={{ display: 'flex' }} className=\\"mb-4\\">
      <Text style={{ flex: '1', textAlign: 'left' }} fontSize=\\"2xl\\">
        Turn great ideas into new possibilities.
      </Text>
    </Box>
    <Box
      style={{ display: 'flex', backgroundColor: undefined }}
      className=\\"bg-transparent flex-row items-center gap-6\\"
    >
      <Button
        style={{ color: '#fff', backgroundColor: '#15803d' }}
        isDisabled={false}
      >
        Get started
      </Button>
    </Box>
  </Box>
</Frame>;
"
`;

exports[`hero with bg 1`] = `
"<Frame width={400} height={400}>
  <Box
    style={{
      display: 'flex',
      backgroundColor: undefined,
      width: '400px',
      height: '400px',
    }}
    className=\\"flex-col bg-blue-500 p-4 gap-3 items-center justify-center\\"
  >
    <Box style={{ display: 'flex' }}>
      <Text
        style={{ flex: '1', textAlign: 'center' }}
        className=\\"text-white\\"
        fontSize=\\"6xl\\"
      >
        Create, iterate, inspire.
      </Text>
    </Box>
    <Box style={{ display: 'flex' }} className=\\"mb-4\\">
      <Text
        style={{ flex: '1', textAlign: 'center' }}
        className=\\"text-white\\"
        fontSize=\\"2xl\\"
      >
        Turn great ideas into new possibilities.
      </Text>
    </Box>
    <Box
      style={{ display: 'flex', backgroundColor: undefined }}
      className=\\"bg-transparent flex-row items-center gap-6\\"
    >
      <Button
        style={{ color: '#000', backgroundColor: '#f1f5f9' }}
        className=\\"text-white\\"
        isDisabled={false}
      >
        Get started
      </Button>
    </Box>
  </Box>
</Frame>;
"
`;

exports[`icon default 1`] = `
"<Frame width={48} height={48}>
  <Image
    style={{ objectFit: 'contain', width: '100%', height: '100%' }}
    src=\\"https://api.iconify.design/material-symbols/menu.svg\\"
  />
</Frame>;
"
`;

exports[`icon with color 1`] = `
"<Frame width={48} height={48}>
  <Box
    style={{
      width: '100%',
      height: '100%',
      backgroundColor: '#60a5fa',
      maskImage:
        'url(https://api.iconify.design/material-symbols/menu.svg) center / contain no-repeat',
      WebkitMask:
        'url(https://api.iconify.design/material-symbols/menu.svg) center / contain no-repeat',
    }}
  />
</Frame>;
"
`;

exports[`link with icon 1`] = `
"<Frame width={100} height={40}>
  <Link
    href=\\"#\\"
    style={{
      fontWeight: 'semibold',
      color: 'dodgerblue',
      textDecorationColor: 'dodgerblue',
      textDecoration: undefined,
    }}
  >
    Test
  </Link>
</Frame>;
"
`;

exports[`text default 1`] = `
"<Frame width={100} height={40}>
  <Text style={{ textAlign: 'center' }} className=\\"text-red-500\\">
    Hello world
  </Text>
</Frame>;
"
`;

exports[`text escape jsx 1`] = `
"<Frame width={100} height={40}>
  <Text style={{ textAlign: undefined }}>{'Hello \\"\\\\'<{test}>\\\\'\\" world'}</Text>
</Frame>;
"
`;
